# MeTaskManager

./: CMakeLists.txt  README
src/: CMakeLists.txt  date.cpp  date.h  gui.cpp  gui.h  main.cpp  main.h  metask  pi.cpp  pi.h  plain.cpp  plain.h  task.cpp  task.h  time.cpp  time.h
